# threecx-call-worker

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  namespace.yaml  secret-external.yaml  service.yaml  servicemonitor.yaml
migrations/: 001_inbound_support.sql  002_monitored_extensions.sql  003_routepoint_divert.sql  004_allow_null_agent.sql  005_fix_upsert_constraint.sql  006_allow_null_inbound_columns.sql
tests/: conftest.py  test_event_handler.py  test_phone.py  test_phone_sql.py
tests/fixtures/events/: 01_inbound_ringing.json  02_inbound_connected.json  03_inbound_terminated.json  04_outbound_connected.json  05_inbound_ringing_no_did.json  06_inbound_failed.json  07_unmonitored_extension.json
worker/: call_tracker.py  config.py  db.py  event_handler.py  main.py  metrics.py  phone.py  threecx_client.py  ws_listener.py
